k8s/nebula/archive/search/elastic/resources/ingress-elk.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elk
  namespace: search
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
spec:
  ingressClassName: nginx
  rules:
    - host: elk.skylab.fi
      http:
        paths:
          - backend:
              service:
                name: main-es-http
                port:
                  number: 9200
            path: /
            pathType: Prefix
