k8s/nebula/archive/search/elastic/resources/ingress-kb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kb
  namespace: search
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
spec:
  ingressClassName: nginx
  rules:
    - host: kb.skylab.fi
      http:
        paths:
          - backend:
              service:
                name: main-kb-http
                port:
                  number: 5601
            path: /
            pathType: Prefix
